--- a/jianjie.html
+++ b/jianjie.html
@@ -26,7 +26,7 @@ a {
 <table width="760" border="5" align="center" cellpadding="0" cellspacing="0">
   <tbody>
     <tr>
-      <td width="140" height="140"><img src="images/QQ图片20231129140924.jpg" alt="" width="149" height="148"/></td>
+      <td width="140" height="140"><img src="images/QQ图片20231129140924.gif" alt="" width="149" height="148"/></td>
       <td width="620"><img src="flash/QQ图片20231129141318.gif" width="197" height="148" alt=""/></td>
     </tr>
     <tr>
