--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@ body {
 <table width="760" border="5" align="center" cellpadding="0" cellspacing="0">
   <tbody style="text-align: center;">
     <tr>
-      <td width="140" height="140"><img src="flash/QQ图片20231128201428.gif"" width="149" height="140" alt=""/></td>
+      <td width="140" height="140"><img src="屏幕截图 2023-08-27 174318.gif"" width="149" height="140" alt=""/></td>
       <td width="620"><img src="flash/QQ图片20231128201428.gif" width="196" height="148" alt=""/></td>
     </tr>
     <tr>
