--- a/xiangce.html
+++ b/xiangce.html
@@ -35,7 +35,7 @@ body {
             <td height="50" style="text-align: center">我的小猫</td>
           </tr>
           <tr>
-            <td width="200" height="400" style="text-align: center"><img src="images/屏幕截图 2023-07-23 222538.png" width="300" height="225" alt=""/></td>
+            <td width="200" height="400" style="text-align: center"><img src="屏幕截图 2023-07-23 222538.png" width="300" height="225" alt=""/></td>
           </tr>
           <tr>
             <td height="50" style="text-align: center; font-size: 18px;"><a href="xiangce2.html">下一页</a></td>
