--- a/xiangce.html
+++ b/xiangce.html
@@ -21,7 +21,7 @@ body {
 <table width="760" border="5" align="center" cellpadding="0" cellspacing="0">
   <tbody style="text-align: center;">
     <tr>
-      <td width="140" height="140"><img src="QQ图片20231129174816.jpg" width="141" height="140" alt=""/></td>
+      <td width="140" height="140"><img src="QQ图片20231129174816.gif" width="141" height="140" alt=""/></td>
       <td width="620"><img src="flash/QQ图片20231128201428.gif" width="196" height="148" alt=""/></td>
     </tr>
     <tr>
@@ -35,7 +35,7 @@ body {
             <td height="50" style="text-align: center">我的小猫</td>
           </tr>
           <tr>
-            <td width="200" height="400" style="text-align: center"><img src="屏幕截图 2023-07-23 222538.png" width="300" height="225" alt=""/></td>
+            <td width="200" height="400" style="text-align: center"><img src="屏幕截图 2023-07-23 222538.gif" width="300" height="225" alt=""/></td>
           </tr>
           <tr>
             <td height="50" style="text-align: center; font-size: 18px;"><a href="xiangce2.html">下一页</a></td>
