--- a/donghua.html
+++ b/donghua.html
@@ -21,7 +21,7 @@ body {
 <table width="760" border="5" align="center" cellpadding="0" cellspacing="0">
   <tbody style="text-align: center;">
     <tr>
-      <td width="140" height="140"><img src="images/QQ图片20231129174831.jpg" width="146" height="140" alt=""/></td>
+      <td width="140" height="140"><img src="QQ图片20231129174831.gif" width="146" height="140" alt=""/></td>
       <td width="620"><img src="flash/QQ图片20231129175719.gif" width="98" height="140" alt=""/></td>
     </tr>
     <tr>
