--- a/xiangce2.html
+++ b/xiangce2.html
@@ -35,7 +35,7 @@ body {
             <td height="50" style="text-align: center">我的爱好</td>
           </tr>
           <tr>
-            <td height="400" style="text-align: center"><img src="images/OIP-C.jpg" width="200" height="209" alt=""/></td>
+            <td height="400" style="text-align: center"><img src="OIP-C.gif" width="200" height="209" alt=""/></td>
           </tr>
         </tbody>
       </table>
