--- a/xiangce3.html
+++ b/xiangce3.html
@@ -35,7 +35,7 @@ body {
             <td height="50" style="text-align: center">我喜爱的明星</td>
           </tr>
           <tr>
-            <td height="400" style="text-align: center"><img src="images/屏幕截图 2023-07-22 230711.png" width="300" height="400" alt=""/></td>
+            <td height="400" style="text-align: center"><img src="屏幕截图 2023-07-22 230711.gif" width="300" height="400" alt=""/></td>
           </tr>
           <tr>
             <td height="50" style="text-align: center; font-size: 18px;"><a href="xiangce2.html">上一页</a></td>
