--- a/xuexi.html
+++ b/xuexi.html
@@ -21,7 +21,7 @@ body {
 <table width="760" border="5" align="center" cellpadding="0" cellspacing="0">
   <tbody style="text-align: center;">
     <tr>
-      <td width="140" height="140"><img src="images/QQ图片20231129174828.jpg" width="152" height="140" alt=""/></td>
+      <td width="140" height="140"><img src="QQ图片20231129174828.gif" width="152" height="140" alt=""/></td>
       <td width="620"><img src="flash/QQ图片20231129175731.gif" width="199" height="120" alt=""/></td>
     </tr>
     <tr>
