--- a/xuexi.html
+++ b/xuexi.html
@@ -38,7 +38,7 @@ body {
               </p></td>
           </tr>
           <tr>
-            <td height="50" style="text-align: center; font-size: 25px; color: #FF53A3;"><img src="QQ图片20231129180707.gif" width="20" height="19" alt=""/><img src="images/QQ图片20231129180656.jpg" width="20" height="14" alt=""/>能摆则摆</td>
+            <td height="50" style="text-align: center; font-size: 25px; color: #FF53A3;"><img src="QQ图片20231129180707.gif" width="20" height="19" alt=""/><img src="QQ图片20231129180656.gif" width="20" height="14" alt=""/>能摆则摆</td>
           </tr>
         </tbody>
       </table></td>
