--- a/index.html
+++ b/index.html
@@ -44,7 +44,8 @@ body {
     <tr>
       <td height="200" colspan="2" bgcolor="#000000"><p>23/11/28 星期二   20:39 </p>
       <p>Copyright</p>
-      <p>&nbsp;&copy;2008 小小版权所有</p></td>
+      <p>&nbsp;&copy;2008 小小版权所有</p>
+      <p><a href="https://liyuyn.github.io/111/">返回寝室主页</a></p></td>
     </tr>
   </tbody>
 </table>
